<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailsActivity"
    tools:showIn="@layout/activity_details">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview_label"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:textColor="@color/colorAccent"/>
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginStart="40dp">
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="text"
            />
        <EditText
            android:id="@+id/et_breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/breed_hint"
            android:inputType="text"/>
    </LinearLayout>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_label"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"/>
    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"/>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/measurement_label"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"/>
    <EditText
        android:id="@+id/et_weight"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/weight_hint"
        android:inputType="number"
        android:layout_marginStart="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/kg_label"/>
</LinearLayout>
</LinearLayout>